# document-templating-service

./: .gitignore  .lycheeignore  .lycheerc.toml  Dockerfile  Gemfile  LICENSE  README.md  TESTING.md  _config.yml  deployment-link-check.md  docker-compose.yaml  index.md  main.py  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.sh  test_docx_linter.py  test_error_handling.py  test_exact_case.py  test_image_support.py  test_undefined_variable_handling.py  test_with_existing_templates.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: docker.yml  pages.yml
docs/: INTEGRATION_SUMMARY.md  README.md  api-endpoints.md  document-templates.md  docx-linter.md  env.example  error-handling.md  examples.md  image-support.md  installation.md  integration.md  missing-fields-handling.md  usage.md
examples/: README.md  demo_linter.py  test_pdf_linting.py
k8s/document-template-processing/: deployment.yaml
models/: schemas.py
services/: docx_linter.py  markdown_formatter.py
temp/demo/: mismatched.docx  nested.docx  perfect.docx  syntax_error.docx  truly_broken.docx  unclosed.docx
test-data/test-json/: farmer.json  quote-Q2025000006-comprehensive.json
test-data/test-results/: debug-farmer_missing_fields_template-processed.xml  debug-farmer_missing_fields_template-report.md  debug-farmer_missing_fields_template-structured.txt  error-2-debug.md  error-2-intermediate.json  intermediate-farmer_missing_fields_template-linting-result.json
test-data/test-results-container/: debug-farmer-profile-template-processed.xml  debug-farmer-profile-template-report.md  debug-farmer-profile-template-structured.txt  debug-farmer-profile-template-with-errors-report.md  debug-farmer-profile-template-with-errors-syntax-error.txt  intermediate-farmer-profile-template-linting-result.json  intermediate-farmer-profile-template-with-errors-linting-result.json
test-data/test-templates/: quote-Q2025000003-template (8).md
test_files/: complex_template.docx  corrupted.docx  runtime_error_division_by_zero.docx  runtime_error_type_mismatch.docx  syntax_error_invalid_tag.docx  syntax_error_malformed_variable.docx  syntax_error_unclosed_tag.docx  test.txt  undefined_nested_variable.docx  undefined_variable.docx  valid_template.docx
test_image_files/: image_test_template.docx  simple_template.docx
test_results/: report.html
tests/: README.md  test_error_handling.py  test_integrated_linting.py  test_pdf_reports.py  test_status_codes.py
